force-app/main/default/objects/Case_RR_Queue_Member_Assignment__c/Case_RR_Queue_Member_Assignment__c.object-meta.xml
<CustomObject>
    <label>Case RR Queue Member Assignment</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Case RR Queue Member Assignment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case RR Queue Member Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>