force-app/main/default/objects/Case_RR_Queue_Member_Assignment__c/fields/Assignment_Updates_Need_Review__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Updates_Need_Review__c</fullName>
    <formula>Case_Round_Robin_Queue__r.Assignment_Updates_Need_Review__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignment Updates Need Review</label>
    <type>Checkbox</type>
</CustomField>