force-app/main/default/objects/Case_RR_Queue_Member_Assignment__c/fields/Case_Round_Robin_Queue__c.field-meta.xml
<CustomField>
    <fullName>Case_Round_Robin_Queue__c</fullName>
    <label>Case Round Robin Queue</label>
    <referenceTo>Case_Round_Robin_Queue__c</referenceTo>
    <relationshipLabel>Case RR Queue Member Assignments</relationshipLabel>
    <relationshipName>Case_RR_Queue_Member_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>