force-app/main/default/objects/Case_RR_Queue_Member_Assignment__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_RR_Queue_Member_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>