force-app/main/default/objects/Case_RR_Queue_Member_Assignment__c/fields/Member_Paused__c.field-meta.xml
<CustomField>
    <fullName>Member_Paused__c</fullName>
    <formula>IF ( Member__r.Pause_Round_Robin__c , &quot;Paused&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Paused</label>
    <type>Text</type>
</CustomField>