force-app/main/default/objects/Case_RR_Queue_Member_Assignment__c/fields/Weight_Percent__c.field-meta.xml
<CustomField>
    <fullName>Weight_Percent__c</fullName>
    <formula>Weight__c / Case_Round_Robin_Queue__r.Total_Queue_Members__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weight Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>